# task-agent-template

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  app.py  routes.py  schemas.py
app/core/: __init__.py  config.py  task_manager.py
app/utils/: logger.py
config/: develop.yaml  local.yaml
